--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "firebase": "^4.1.3",
     "re-base": "^3.0.2",
     "react": "^15.6.1",
