Build with homepage in package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "office-games-viewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kotlarz.github.io/office-games-viewer/build/",
   "dependencies": {
     "classnames": "^2.2.5",
     "firebase": "^4.1.3",
