--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
-    "react-scripts": "1.0.10"
+    "react-scripts": "^1.0.10",
+    "material-ui": "^0.18.6",
+    "react-tap-event-plugin": "^2.0.1" 
   },
   "scripts": {
     "start": "react-scripts start",
