--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "office-games-viewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kotlarz.github.io/office-games-viewer",
   "dependencies": {
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -18,21 +19,24 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
     "firebase": "^4.1.3",
+    "gh-pages": "1.0.0",
+    "material-ui": "^0.18.6",
     "moment": "^2.18.1",
     "re-base": "^3.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
     "react-scripts": "^1.0.10",
-    "material-ui": "^0.18.6",
-    "react-tap-event-plugin": "^2.0.1" 
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "babel": {
     "presets": [
