--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-react": "7.1.0",
     "firebase": "^4.1.3",
     "gh-pages": "1.0.0",
+    "history": "^4.6.3",
     "material-ui": "^0.18.6",
     "moment": "^2.18.1",
     "re-base": "^3.0.2",
@@ -27,6 +28,8 @@
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
     "react-fontawesome": "^1.6.1",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "^1.0.10",
     "react-tap-event-plugin": "^2.0.1"
   },
